# multi_queue

./: .clang-format  .travis.yml  CMakeLists.txt  README.md  build.sh
scripts/: build.bat  dependencies.bat  dependencies.sh
src/: CMakeLists.txt  multi_queue.cxx  multi_queue.h  multi_queue_worker.cxx  multi_queue_worker.h
tests/src/: CMakeLists.txt  base_test.h  bench.cxx  benchmarks.cxx  multi_queue_old.h  test_common.h  unit_test.cxx  unit_tests.cxx
